[JSC] B3 Values shouldn't recompute their adjacency list offset when children are accessed https://bugs.webkit.org/show_bug.cgi?id=277381 rdar://132848864

Reviewed by Yusuke Suzuki.

Avoids calling adjacencyListOffset() every time we need to access the adjacency list
of a B3::Value. Currently, because we don't have the information about what derived
class we are, this function means we switch on the B3::Value's opcode every time we
access any child of a Value. With this patch, we instead compute this offset once on
node construction, and cache it as a 16-bit integer field on the base Value, in what
was previously two bytes of unused padding.

* Source/JavaScriptCore/b3/B3Value.h:
* Source/JavaScriptCore/b3/B3ValueInlines.h:
(JSC::B3::Value::computeAdjacencyListOffset const):
(JSC::B3::Value::adjacencyListOffset const): Deleted.

Canonical link: https://commits.webkit.org/281663@main